--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "Winery-website",
+  "name": "Markit-Website",
   "version": "1.0.0",
-  "description": "Website related to traditional winery.",
+  "description": "Website related to marketing services.",
   "main": "index.js",
   "scripts": {
     "dev": "webpack --mode development",
@@ -10,14 +10,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/AndreasDeveloper/Winery-Website"
+    "url": "git+https://github.com/AndreasDeveloper/Markit-Marketing-Company-Website"
   },
   "author": "AndreasDEV",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/AndreasDeveloper/Winery-Website/issues"
+    "url": "https://github.com/AndreasDeveloper/Markit-Marketing-Company-Website/issues"
   },
-  "homepage": "https://github.com/AndreasDeveloper/Winery-Website#readme",
+  "homepage": "https://github.com/AndreasDeveloper/Markit-Marketing-Company-Website#readme",
   "devDependencies": {
     "@babel/core": "^7.2.0",
     "@babel/polyfill": "^7.0.0",
@@ -30,11 +30,10 @@
     "file-loader": "^3.0.1",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
-    "install": "^0.12.2",
     "mini-css-extract-plugin": "^0.5.0",
     "node-sass": "^4.12.0",
-    "npm": "^6.5.0",
     "sass-loader": "^7.1.0",
+    "svg-inline-loader": "^0.8.0",
     "url-loader": "^1.1.2",
     "webpack": "^4.27.1",
     "webpack-cli": "^3.1.2",
